changes nesting of button styling to fix deployed issue on safari

--- a/src/app/components/Hero/HeroStyles.module.css
+++ b/src/app/components/Hero/HeroStyles.module.css
@@ -40,37 +40,37 @@
   .info .linkIcon:hover {
     transform: scale(1.1);
   }
+}
 
-  .info button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 20px;
-    background-color: var(--btn-color) !important;
-    color: var(--btn-text-color) !important;
-    border: none !important;
-    border-radius: 20px !important;
-    width: 150px !important;
-    height: 50px !important;
-    font-size: 20px !important;
-    font-weight: bold !important;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3) !important;
-    transition: box-shadow 200ms ease-in-out, transform 200ms ease-in-out !important;
-  }
+.container .info button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  background-color: var(--btn-color) !important;
+  color: var(--btn-text-color) !important;
+  border: none !important;
+  border-radius: 20px !important;
+  width: 150px !important;
+  height: 50px !important;
+  font-size: 20px !important;
+  font-weight: bold !important;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3) !important;
+  transition: box-shadow 200ms ease-in-out, transform 200ms ease-in-out !important;
+}
 
-  .downloadIcon {
-    height: 30px !important;
-    width: 30px !important;
-  }
+.container .downloadIcon {
+  height: 30px !important;
+  width: 30px !important;
+}
 
-  .info button:hover {
-    transform: scale(1.05);
-  }
+.container .info button:hover {
+  transform: scale(1.05);
+}
 
-  .info button:active {
-    transform: translateY(2px);
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
-  }
+.container .info button:active {
+  transform: translateY(2px);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
 }
 
 .themeContainer {
@@ -86,6 +86,8 @@
 .description {
     max-width: 30ch;
     align-self: center;
+    text-align: center;
+    justify-content: center;
 }
 
 .subheading {
